feat: 新增Vue前端项目并优化后端配置
新增Vue前端项目，包括登录、主页、用户管理等功能模块。优化后端配置，移除冗余代码，更新依赖版本，调整文件上传路径初始化逻辑。新增日志配置，完善用户服务接口，重构安全验证逻辑。